@@ -101,22 +101,24 @@ tab_input_extra::setup_cues() {
 
 void
 tab_input_extra::setup_compression() {
-  if (0 == cob_compression->GetCount()) {
-    cob_compression->Append(wxEmptyString);
-    cob_compression->Append(wxEmptyString);
-    cob_compression->Append(wxT("zlib"));
-    if (capabilities[wxT("BZ2")] == wxT("true"))
-      cob_compression->Append(wxT("bz2"));
-    if (capabilities[wxT("LZO")] == wxT("true"))
-      cob_compression->Append(wxT("lzo"));
-  }
+  int selection = cob_compression->GetSelection();
+
+  cob_compression->Clear();
+  cob_compression->Append(wxEmptyString);
+  cob_compression->Append(wxEmptyString);
+  cob_compression->Append(wxT("zlib"));
+  if (capabilities[wxT("BZ2")] == wxT("true"))
+    cob_compression->Append(wxT("bz2"));
+  if (capabilities[wxT("LZO")] == wxT("true"))
+    cob_compression->Append(wxT("lzo"));
 
   cob_compression_translations.clear();
   cob_compression_translations.add(wxT("none"), Z("none"));
 
-  int selection = cob_compression->GetSelection();
+  selection = cob_compression->GetSelection();
   cob_compression->SetString(1, Z("none"));
-  cob_compression->SetSelection(selection);
+
+  cob_compression->SetSelection((0 > selection) || (cob_compression->GetCount() >= static_cast<unsigned int>(selection)) ? 0 : selection);
 }
 
 void
