@@ -1,3 +1,8 @@
+2011-05-28  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mmg: bug fix: Fixed populating the 'compression' drop down box
+	according to what mkvmerge was compiled with.
+
 2011-05-27  Moritz Bunkus  <moritz@bunkus.org>
 
 	* build system: Added a configure check that prevents compilation
